--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Increments the minor portion of a semver version number in a file.",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,8 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0"
   }
 }
