--- a/.github/workflows/bump-minor.yml
+++ b/.github/workflows/bump-minor.yml
@@ -23,7 +23,7 @@ jobs:
           fetch-depth: 1
 
       - name: Bump minor version
-        uses: guystrelitz/semver-bump-micro@v1
+        uses: guystrelitz/semver-bump-micro@main
         with:
           target_directory: ${{ env.TARGET_DIR }}
           target_file: ${{ env.TARGET_FILE }}
