--- a/.github/workflows/bump-minor.yml
+++ b/.github/workflows/bump-minor.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
         with:
-          sparse-checkout: |
-            ${{ env.TARGET_DIR }}/${{ env.TARGET_FILE }}
-          sparse-checkout-cone-mode: false
+          # sparse-checkout: |
+          #   ${{ env.TARGET_DIR }}/${{ env.TARGET_FILE }}
+          # sparse-checkout-cone-mode: false
           fetch-depth: 1
 
       - name: Bump minor version
