--- a/.github/workflows/bump-minor.yml
+++ b/.github/workflows/bump-minor.yml
@@ -7,6 +7,9 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write
+
 jobs:
   bump-minor:
     runs-on: ubuntu-latest
@@ -20,6 +23,7 @@ jobs:
           # sparse-checkout: |
           #   ${{ env.TARGET_DIR }}/${{ env.TARGET_FILE }}
           # sparse-checkout-cone-mode: false
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 1
 
       - name: Bump minor version
