sparse-checkout-cone-mode: false

--- a/.github/workflows/bump-minor.yml
+++ b/.github/workflows/bump-minor.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           sparse-checkout: |
             ${{ env.TARGET_DIR }}/${{ env.TARGET_FILE }}
-          # sparse-checkout-cone-mode: false
+          sparse-checkout-cone-mode: false
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 1
 
