--- a/.github/workflows/bump-major.yml
+++ b/.github/workflows/bump-major.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
       confirm_major:
-        description: '**Major version should only be incremented for breaking changes or major marketing releases.** Please confirm that this is the case.'
+        description: Major version should only be incremented for breaking changes or major marketing releases. Please confirm that this is the case.
         required: false
         type: boolean
         default: false
