--- a/.github/workflows/bump-major.yml
+++ b/.github/workflows/bump-major.yml
@@ -7,13 +7,16 @@ on:
         required: true
         type: string
       confirm_major:
-        description: '**Major version should only be incremented for breaking changes or major marketing releases.** Please confirm that this is the case.'
+        description: Major version should only be incremented for breaking changes or major marketing releases. Please confirm that this is the case.
         required: false
         type: boolean
         default: false
 
+permissions:
+  contents: write
+
 jobs:
-  check-confirmation:
+  cancel-if-unconfirmed:
     runs-on: ubuntu-latest
     if: inputs.confirm_major == false
     steps:
@@ -34,11 +37,11 @@ jobs:
         with:
           sparse-checkout: |
             ${{ env.TARGET_DIR }}/${{ env.TARGET_FILE }}
-          sparse-checkout-cone-mode: false
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 1
 
       - name: Bump major version
-        uses: guystrelitz/semver-bump-micro@v1
+        uses: guystrelitz/semver-bump-micro@main
         with:
           target_directory: ${{ env.TARGET_DIR }}
           target_file: ${{ env.TARGET_FILE }}
